[gd_scene load_steps=4 format=3 uid="uid://bya7bnuwsrh0r"]

[ext_resource type="Script" uid="uid://17ri2p5alefk" path="res://Scenes/Combat test/combat_system.gd" id="1_1cbh1"]
[ext_resource type="Script" uid="uid://l2su46g4ecrn" path="res://Scenes/Combat test/UnitSpawner.gd" id="2_ewyk4"]
[ext_resource type="PackedScene" uid="uid://bw7kjd8cye6tv" path="res://Scenes/Combat test/Unit.tscn" id="3_xycmw"]

[node name="Combat_test_scene" type="Node2D"]
script = ExtResource("1_1cbh1")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PlayerSpawner" type="Node" parent="."]
script = ExtResource("2_ewyk4")
unit_scene = ExtResource("3_xycmw")
faction = 1

[node name="Tile0" type="Marker2D" parent="PlayerSpawner"]
position = Vector2(-508, -32)

[node name="Tile1" type="Marker2D" parent="PlayerSpawner"]
position = Vector2(-476, -32)

[node name="Tile2" type="Marker2D" parent="PlayerSpawner"]
position = Vector2(-444, -32)

[node name="Tile3" type="Marker2D" parent="PlayerSpawner"]
position = Vector2(-508, 0)

[node name="Tile4" type="Marker2D" parent="PlayerSpawner"]
position = Vector2(-476, 0)

[node name="Tile5" type="Marker2D" parent="PlayerSpawner"]
position = Vector2(-444, 0)

[node name="Tile6" type="Marker2D" parent="PlayerSpawner"]
position = Vector2(-508, 32)

[node name="Tile7" type="Marker2D" parent="PlayerSpawner"]
position = Vector2(-476, 32)

[node name="Tile8" type="Marker2D" parent="PlayerSpawner"]
position = Vector2(-444, 32)

[node name="EnemySpawner" type="Node" parent="."]
script = ExtResource("2_ewyk4")
unit_scene = ExtResource("3_xycmw")
faction = 2

[node name="Tile0" type="Marker2D" parent="EnemySpawner"]
position = Vector2(434, -31)

[node name="Tile1" type="Marker2D" parent="EnemySpawner"]
position = Vector2(466, -31)

[node name="Tile2" type="Marker2D" parent="EnemySpawner"]
position = Vector2(498, -31)

[node name="Tile3" type="Marker2D" parent="EnemySpawner"]
position = Vector2(434, 1)

[node name="Tile4" type="Marker2D" parent="EnemySpawner"]
position = Vector2(466, 1)

[node name="Tile5" type="Marker2D" parent="EnemySpawner"]
position = Vector2(498, 1)

[node name="Tile6" type="Marker2D" parent="EnemySpawner"]
position = Vector2(434, 33)

[node name="Tile7" type="Marker2D" parent="EnemySpawner"]
position = Vector2(466, 33)

[node name="Tile8" type="Marker2D" parent="EnemySpawner"]
position = Vector2(498, 33)

[connection signal="enemy_units_spawned" from="PlayerSpawner" to="." method="_on_enemy_units_spawned"]
[connection signal="player_units_spawned" from="PlayerSpawner" to="." method="_on_player_units_spawned"]
